styles.scss
@import 'normalize.css';

@mixin respond-to($point) {
  @if $point == small {
    @media (max-width: 600px) {
      @content;
    }
  } @else if $point == medium {
    @media (max-width: 900px) {
      @content;
    }
  } @else if $point == large {
    @media (max-width: 1200px) {
      @content;
    }
  } @else if $point == portrait {
    @media (orientation: portrait) {
      @content;
    }
  }
}

html,
body {
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  text-rendering: optimizeLegibility;
  -webkit-overflow-scrolling: touch;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
}

* {
  box-sizing: border-box;
}

label {
  font-size: 10px;
  margin-bottom: 6px;
  text-transform: uppercase;
  color: #666;
}

button {
  border: 1px solid black;
  background-color: white;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 12px;
  cursor: pointer;

  &:hover {
    background-color: black;
    color: white;
  }

  &.selected {
    background-color: black;
    color: white;
  }
}

.main-container {
  display: flex;
  flex-direction: row;

  @include respond-to(portrait) {
    flex-direction: column;
  }
}

.col {
  width: 50%;
  height: 100vh;
  position: relative;

  @include respond-to(portrait) {
    width: 100%;
    height: auto;
  }

  &.left {
    @include respond-to(portrait) {
      height: 50vh;
    }
  }
}

.trigger-container {
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;

  .trigger-label {
    font-size: 14px;
  }
}

.triggers {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  height: 100%;
  overflow: hidden;
  min-height: 620px;

  .trigger,
  .add-trigger {
    display: flex;
    width: 20%;
    height: 50%;
  }

  .trigger {
    flex-direction: column;
    padding: 13px 10px;
    row-gap: 10px;
    text-align: center;
    justify-content: space-between;
    position: relative;

    .direction {
      display: flex;
      flex-direction: row;
    }

    .header {
      width: 100%;
      display: flex;
      justify-content: space-between;
      border-bottom: 1px solid #f1f1f1;

      label {
        margin-bottom: 0;
      }

      button {
        appearance: none;
        background-color: #fff;
        border: none;
        padding: 0 0 10px 10px;
        font-size: 12px;
        margin-top: -2px;
        color: #666;

        &:hover {
          color: #d3d3d3;
        }
      }
    }
  }

  .add-trigger {
    align-items: center;
    justify-content: center;
    cursor: pointer;
    flex-direction: column;
    font-size: 32px;
    text-transform: uppercase;
    color: #d3d3d3;
    appearance: none;
    border: none;

    &:hover {
      background-color: #f1f1f1;
    }
  }

  .control {
    display: flex;
    flex-direction: column;
    // row-gap: 10px;

    &.inline {
      flex-direction: row;
      align-items: center;
      justify-content: center;
      column-gap: 15px;

      label {
        margin-bottom: 0;
      }
    }

    &.full {
      flex: 1;

      input {
        height: 100%;
        min-height: 40px;
      }
    }

    .direction {
      justify-content: center;
    }
  }

  input[type='range'] {
    appearance: slider-vertical;
  }
}

// trajectories

#trajectories-container {
  height: 100%;
  overflow-y: scroll;
  padding-bottom: 40px;

  .header {
    padding: 15px 10px;
    border-top: 1px solid #f1f1f1;
    display: flex;
    flex-direction: row;
    column-gap: 20px;
  }

  .trajectory {
    column-gap: 15px;
    padding: 10px;
  }

  .point {
    display: flex;
    flex-direction: row;
    column-gap: 15px;

    input {
      width: 100%;
    }
  }
}

/*GUI*/
#gui-container {
  padding-top: 33.8px;
}

.tabs {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 9;
}

.tab {
  background-color: #f1f1f1;
  border: none;
  cursor: pointer;
  padding: 10px 15px;
  transition: 0.3s;
}

.tab:hover {
  background-color: #ddd;
}

.tabcontent {
  display: none;
  border-top: none;
  overflow: hidden;
  height: 100%;
  position: relative;

  .lines {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    pointer-events: none;
    z-index: 999;

    .line {
      background-color: #f1f1f1;
      position: absolute;

      &.top {
        width: 100%;
        height: 1px;
        position: absolute;
        top: 0;
        left: 0;
      }

      &.middle {
        width: 100%;
        height: 1px;
        position: absolute;
        top: 50%;
        left: 0;
      }

      &.left20 {
        width: 1px;
        height: 100%;
        position: absolute;
        top: 0;
        left: 20%;
      }

      &.left40 {
        width: 1px;
        height: 100%;
        position: absolute;
        top: 0;
        left: 40%;
      }

      &.left60 {
        width: 1px;
        height: 100%;
        position: absolute;
        top: 0;
        left: 60%;
      }

      &.left80 {
        width: 1px;
        height: 100%;
        position: absolute;
        top: 0;
        left: 80%;
      }
    }
  }
}

/*GUI for OSC*/

.osc-container {
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: auto;
}

.item {
  flex-direction: column;
  padding-left: 10px; // Add this line
  padding-right: 10px;
}

.oscConfigTable {
  border-collapse: collapse;
  width: 100%;
  margin-top: 10px;
  table-layout: fixed;
  background-color: white;
  /* Set the background color of the table */
}

/*styling for the udpTable*/
#portTable {
  border-collapse: collapse;
  width: 100%;
  margin-top: 10px;
  background-color: lightgray;
  table-layout: fixed;
  /* Set the background color of the table */
  th,
  td {
    border: 1px solid #ddd;
  }
  /* Specify the width of the cells */
  .indexCell {
    width: 10%;
  }

  .portCell {
    width: 10%;
  }

  .ipCell {
    width: 30%;
  }

  .checkboxCell {
    width: 10%;
  }
  input[type='text'] {
    width: 100%;
  }
  input[type='checkbox'] {
    width: 100%;
  }
  .checked {
    background-color: green;
  }
}

/*styling for the udpTable*/
#messageTable {
  border-collapse: collapse;
  width: 100%;
  margin-top: 10px;
  background-color: lightgray;
  table-layout: fixed;
  th,
  td {
    border: 1px solid #ddd;
  }

  .portNumberCell {
    width: 10%;
  }
  .oscMessageCell {
    width: 30%;
  }
  .oscArgumentsCell {
    width: 80%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }
  .sendCell {
    width: 10%;
  }

  .portNumberSelect {
    width: 100%;
  }
  .addressInput {
    width: 100%;
  }
  .oscArgumentsInput {
    display: grid;
    grid-template-columns: repeat(3, 1fr); // Create 3 equal-width columns
    gap: 1px; // Space between grid items
  }

  .osc-input,
  .osc-select,
  .osc-label {
    box-sizing: border-box;
    margin: 0 5px;
  }
  .osc-input {
    width: 50%;
  }

  input[type='checkbox'] {
    width: 100%;
  }
}

